--- a/themes/seven/style.css
+++ b/themes/seven/style.css
@@ -399,8 +399,8 @@ table {
   margin: 0 0 10px;
   border: 1px solid #bebfb9;
 }
-table td,
-table th {
+td,
+th {
   vertical-align: middle;
   padding: 8px 10px;
   border: 0;
@@ -422,7 +422,7 @@ tr.drag {
 tr.drag-previous {
   background: #ffb;
 }
-table th {
+th {
   text-transform: uppercase;
   background: #e1e2dc;
   font-weight: normal;
@@ -434,58 +434,58 @@ table th {
 /**
  * Force browsers to calculate the width of a 'select all' TH element.
  */
-table th.select-all {
+th.select-all {
   width: 1px;
 }
-table th.active {
+th.active {
   background: #bdbeb9;
 }
-table th a {
+th a {
   display: block;
   position: relative;
 }
-table th.active a {
+th.active a {
   padding: 0 25px 0 0; /* LTR */
 }
 [dir="rtl"] table th.active a {
   padding: 0 0 0 25px;
 }
-table th.active img {
+th.active img {
   position: absolute;
   top: 3px;
   right: 3px; /* LTR */
 }
-[dir="rtl"] table th.active img {
+[dir="rtl"] th.active img {
   left: 3px;
   right: auto;
 }
-table td.active {
+td.active {
   background: #e9e9dd;
 }
-table tr.odd td.active {
+tr.odd td.active {
   background: #f3f4ee;
 }
-table tr.selected td.active,
-table tr.selected td {
+tr.selected td.active,
+tr.selected td {
   background: #ffc;
   border-color: #eeb;
 }
-table.system-status-report tr {
+.system-status-report tr {
   border-bottom: 1px solid #ccc;
 }
-table.system-status-report tr.ok {
+.system-status-report tr.ok {
   color: #255b1e;
   background-color: #e5ffe2;
 }
-table.system-status-report tr.info {
+.system-status-report tr.info {
   color: #040f37;
   background-color: #bdf;
 }
-table.system-status-report tr.warning {
+.system-status-report tr.warning {
   color: #840;
   background-color: #fffce5;
 }
-table.system-status-report tr.error {
+.system-status-report tr.error {
   color: #8c2e0b;
   background-color: #fef5f1;
 }
