--- a/modules/system/css/system.css
+++ b/modules/system/css/system.css
@@ -89,7 +89,7 @@ fieldset.collapsible .fieldset-legend {
   box-sizing: border-box;
 }
 .resizable-textarea .grippie {
-  background: #eee url(../../misc/grippie.png) no-repeat center 2px;
+  background: #eee url(../../../misc/grippie.png) no-repeat center 2px;
   border: 1px solid #ddd;
   border-top-width: 0;
   cursor: s-resize;
