Issue #178: Convert fields to configuration.

--- a/modules/config/css/config.admin.css
+++ b/modules/config/css/config.admin.css
@@ -1,6 +1,12 @@
 /**
  * CSS for the admin section of the Config module.
  */
+.config-export-single-form textarea {
+  font: 1.2em monospace;
+  /* Note the Firefox does not support whitespace in textareas.
+     See https://bugzilla.mozilla.org/show_bug.cgi?id=82711 */
+  white-space: pre;
+}
 .ui-dialog.config-diff {
   max-width: 95%;
 }
