Issue #379: Added 'float' option to image formatter & made teaser images floated by default.

--- a/modules/system/css/system.css
+++ b/modules/system/css/system.css
@@ -323,3 +323,13 @@ section,
 summary {
   display: block;
 }
+
+/**
+ * Floated images.
+ */
+img.align-left {
+  float: left;
+}
+img.align-right {
+  float: right;
+}
