Issue #150: Convert admin/content to a view.

--- a/modules/views/views_ui/css/views_ui.admin.css
+++ b/modules/views/views_ui/css/views_ui.admin.css
@@ -321,6 +321,12 @@
   overflow: auto;
 }
 
+.views-ui-dialog input,
+.views-ui-dialog select,
+.views-ui-dialog textarea {
+  max-width: 100%;
+}
+
 /* @end */
 
 /* @group Settings forms */
