Issue #501: Set module page columns to a fixed-width.

--- a/modules/system/css/system.admin.css
+++ b/modules/system/css/system.admin.css
@@ -73,8 +73,17 @@ small .admin-link:after {
 #system-modules div.incompatible {
   font-weight: bold;
 }
+#system-modules td.checkbox {
+  width: 20px;
+}
+#system-modules td.module {
+  width: 180px;
+}
+#system-modules td.version {
+  width: 70px;
+}
 #system-modules td.operations {
-  min-width: 110px;
+  width: 105px;
 }
 div.admin-requirements,
 div.admin-required {
