Issue #301: Removed 'ok' message class in favor of 'status'.

--- a/modules/system/css/system.theme.css
+++ b/modules/system/css/system.theme.css
@@ -440,11 +440,11 @@ div.status {
   border-color: #be7;
 }
 div.status,
-.ok {
+.status {
   color: #234600;
 }
 div.status,
-table tr.ok {
+table tr.status {
   background-color: #f8fff0;
 }
 
