Issue #617: Add clearfix to l-container in 2-col layouts.

--- a/layouts/two_column/two-column.css
+++ b/layouts/two_column/two-column.css
@@ -7,6 +7,7 @@
 .layout--two-column .l-header:after,
 .layout--two-column .l-main-wrapper:after,
 .layout--two-column .l-footer:after,
+.layout--two-column .l-container:after,
 .layout--two-column .l-content:after,
 .layout--two-column .l-sidebar:after {
   content: "";
